--- a/index.html
+++ b/index.html
@@ -1,76 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Bio</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kembang Api Tahun Baru</title>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+      background-color: black;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      font-family: Arial, sans-serif;
+    }
+
+    #firework-container {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+
+    .rocket {
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      width: 10px;
+      height: 40px;
+      background: linear-gradient(to top, red, yellow);
+      transform: translateX(-50%);
+      animation: flyUp 2s ease-in forwards;
+    }
+
+    .explosion {
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background: radial-gradient(circle, rgba(255,255,0,1) 0%, rgba(255,0,0,0.8) 40%, rgba(0,0,0,0) 70%);
+      animation: explode 1s ease-out forwards;
+    }
+
+    @keyframes flyUp {
+      to {
+        transform: translate(-50%, -200%);
+      }
+    }
+
+    @keyframes explode {
+      to {
+        transform: scale(20);
+        opacity: 0;
+      }
+    }
+
+    #message {
+      display: none;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 3rem;
+      text-shadow: 0 0 10px white, 0 0 20px white;
+      cursor: pointer;
+      text-align: center;
+    }
+
+    #start-button {
+      position: absolute;
+      bottom: 20px;
+      padding: 10px 20px;
+      font-size: 1.5rem;
+      background-color: white;
+      color: black;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      z-index: 10;
+    }
+
+    #start-button:hover {
+      background-color: lightgray;
+    }
+
+    @keyframes colorChange {
+      0% { color: red; }
+      25% { color: yellow; }
+      50% { color: green; }
+      75% { color: blue; }
+      100% { color: purple; }
+    }
+
+    #message:hover {
+      animation: colorChange 1s infinite;
+    }
+
+    #start-button:hover {
+      animation: colorChange 1s infinite;
+    }
+  </style>
 </head>
 <body>
-<div class="container">    
-    <div class="cf">
-        <div class="isi">
-            <h1>Biodata Mahasiswa</h1>
-            <img src="data1.jpeg" alt="Foto Mahasiswa">
-        </div>
-            <div class="sidebar">
-                <h2>About Me</h2><br>
-                <p>Halo nama saya Muh Akram, seorang pelajar disalah satu kampus di makassar yaitu Universitas Hasanuddin dan mengambil jurusan
-                    Teknik Informatika
-                </p>
-                <br>
-                <h2>Lebih Lengkap :</h2>
-                <br>
-                <div class="a1">
-                <h4>Riwayat Pendidikan</h4>
-                <br>
-                <ul>
-                    <li>SD Negeri 16 Pinrang</li>
-                    <li>SMP Negeri 1 Pinrang</li>
-                    <li>SMA Negeri 1 Pinrang</li>
-                    <li>Universitas Hasanuddin</li>
-                </ul>
-                <br>
-                <h4>Lainnya</h4>
-                <br>
-                <table border="0" cellpadding="4" cellspacing="7">
-                    <tr>
-                        <td>Nama</td>
-                        <td>:</td>
-                        <td>Muh Akram</td>
-                    </tr>
-                    <tr>
-                        <td>Status</td>
-                        <td>:</td>
-                        <td>Pelajar</td>
-                    </tr>
-                    <tr>
-                        <td>Alamat</td>
-                        <td> : </td>
-                        <td>Jl.Beruang, Pinrang</td>
-                    </tr>
-                    <tr>
-                        <td>Alamat2</td>
-                        <td>:</td>
-                        <td>Jl.Malino, Gowa</td>
-                    </tr>
-                    <tr>
-                        <td>Hobi</td>
-                        <td>:</td>
-                        <td>Menonton, Membaca</td>
-                    </tr>
-                </table>
+  <div id="firework-container"></div>
+  <div id="message" onclick="changeMessage()">Selamat Tahun Baru!</div>
+  <button id="start-button">Mulai</button>
 
+  <script>
+    function createFirework() {
+      const container = document.getElementById('firework-container');
 
+      // Create rocket
+      const rocket = document.createElement('div');
+      rocket.classList.add('rocket');
+      container.appendChild(rocket);
 
-            </div>
-            </div>
-        </div>
-        <div id="copyright">
-                &copy; 2022. <b>Muh Akram.</b> All Right Reserved.
-        </div>
-   
-</div>
+      // Trigger explosion after rocket flies up
+      rocket.addEventListener('animationend', () => {
+        container.removeChild(rocket);
+
+        // Create explosion
+        const explosion = document.createElement('div');
+        explosion.classList.add('explosion');
+        explosion.style.left = '50%';
+        explosion.style.top = '50%';
+        container.appendChild(explosion);
+
+        // Show message after explosion
+        explosion.addEventListener('animationend', () => {
+          container.removeChild(explosion);
+          const message = document.getElementById('message');
+          message.style.display = 'block';
+        });
+      });
+    }
+
+    function changeMessage() {
+      const message = document.getElementById('message');
+      message.textContent = 'Terima Kasih Admin!';
+    }
+
+    document.getElementById('start-button').addEventListener('click', () => {
+      document.getElementById('start-button').style.display = 'none';
+      createFirework();
+    });
+  </script>
 </body>
 </html>
