--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
     function changeMessage() {
       const message = document.getElementById('message');
-      message.textContent = 'Terima Kasih Admin!';
+      message.textContent = 'Terima Kasih Min!';
       message.classList.add('colorful');
       startRandomExplosions();
     }
